Ivan - Fix Alignment issue #18

--- a/client/src/app/admin/panel/admin-panel-menu.scss
+++ b/client/src/app/admin/panel/admin-panel-menu.scss
@@ -1,3 +1,6 @@
 .admin-panel-menu {
 
+    &__item-text {
+        display: inline-flex;
+    }
 }
